--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -615,13 +615,6 @@
         // Get transactions from api
         async function GetTransactionsAndAddHouses(args) {
 
-            // Clear existing markers
-            map.eachLayer(function(layer) {
-                if (layer.options.id == "marker") {
-                    map.removeLayer(layer);
-                }
-            });
-
             // Add length to args
             args.length = "50000";
 
@@ -689,11 +682,16 @@
             return combined;
         }
 
+        // Create feature group for markers
+        var markers = L.markerClusterGroup();
+
         // Add houses to map
         function AddHouses(houses) {
 
-            // Create feature group for markers
-            var markers = L.markerClusterGroup();
+            // Delete all markers
+            markers.clearLayers();
+
+            markers = L.markerClusterGroup();
 
             // Loop through houses
             for (var i = 0; i < houses.length; i++) {
